--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Projeto pessoal de Análise de Dados. Nesse analiso os dados referente a todos os jogos da história da Lotofacil (Loterias do Brasil). 
+Projeto pessoal de Análise de Dados. Nele, analiso os dados referente a todos os jogos da história da Lotofácil (Loterias do Brasil). 
 
 Nesse projeto dá para tirar vários insights sobre o comportamento dos dados durante todo o período dos jogos ocorridos.
 
